# Presentation_Slides_Explanation_Agent

./: README.md  extraction_results.json  main.py  pyproject.toml  slides.md  summary.md
