[project]
name = "presentation-slides-explanation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.1.2",
    "langchain-core>=1.2.8",
    "langgraph>=1.0.7",
    "mlx>=0.30.5",
    "mlx-lm>=0.29.1",
    "mlx-vlm>=0.3.9",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "python-frontmatter>=1.1.0",
    "regex>=2026.1.15",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
